@@ -285,6 +285,9 @@ Enable or disable (if prefixed with \fBno\-\fR) additional \fBpound\fR
 features.  As of this version, the following \fIFEATURE\fRs are implemented:
 .RS
 .TP
+.RB [ no\- ] deprecation
+Warn if any deprecated statements are used in configuration file.
+.TP
 .RB [ no\- ] dns
 Resolve host names found in configuration file.  This is the default.
 You can disable it if your configuration file refers to backends only
